--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -20,3 +20,17 @@
 .swal-button--confirm {
   background: #f4a261;
 }
+
+.btn-danger {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: #f4a261;
+}
