--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -17,13 +17,16 @@
           <li class="nav-item">
             <%= link_to "My lists", "#", class: "nav-link" %>
           </li>
+          <li class="nav-item active">
+            <%= link_to "See Movies", movies_path, class: "nav-link" %>
+          </li>
 
       </ul>
     </div>
   </div>
 </div>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);">
+<div class="banner img-fluid" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://media.istockphoto.com/photos/film-reels-on-black-background-movie-video-and-cinema-prodaction-and-picture-id1336937059?b=1&k=20&m=1336937059&s=170667a&w=0&h=Lg5T5VAhrTRhHmFrWp8cTWRjZrSm-nPkeTpVU2dsZoE=);">
   <div class="container">
     <h1><strong>Save any kind of movies</strong>!</h1>
     <div class="d-grid gap-2 col-2 mx-auto">
@@ -32,15 +35,17 @@
   </div>
 </div>
 
-<div class='container mt-3 px-5'>
-  <h2>My lists</h2>
+<div class='container mt-3'>
+  <h2 class='text-center'>My lists</h2>
   <div class="row cards">
-    <% @lists.each do |list| %>
-      <div class="col-4-sm">
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= list.image_url %>')">
-             <h3><%= link_to list.name, list_path(list)%></h3>
+      <% @lists.each do |list| %>
+        <div class="col-4-sm">
+            <% if list.photo.attached? %>
+              <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key %>')">
+                <h3><%= link_to list.name, list_path(list)%></h3>
+              </div>
+            <% end %>
           </div>
-        </div>
       <% end %>
-    </div>
+  </div>
 </div>
