--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,8 +1,8 @@
-<div class="list-banner">
+<div class="list-banner mt-5">
   <h1>Create your list</h1>
 </div>
 
-<div class="container">
+<div class="container mt-5">
   <div class="row">
     <div class="col-12">
       <%= simple_form_for(@list) do |f| %>
