--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,8 @@
   background-size: cover;
   background-position: cover;
   padding: 150px 0;
+  height: 500px;
+  background-position: center;
 }
 
 .banner h1 {
