--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -27,7 +27,7 @@
 
 
       <div class="banner" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.12) 0, rgba(0,0,0,0.55) 74.4%),url('<%= cl_image_path @list.photo.key, crop: :thumb, gravity: :face %>')">
-          <h2 class="text-center"> <%= @list.name %></h2>
+          <h1 class="text-center"> <%= @list.name %></h1>
       </div>
 
 <div class='container'>
@@ -35,7 +35,7 @@
     <% @list.movies.each do |movie| %>
       <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
       <div class="col-6 col-sm-3 mb-4" data-aos="zoom-in">
-        <div class="bg-white rounded shadow h-100">
+        <div class="bg-white rounded-5 shadow h-100">
           <%= image_tag movie.poster_url, alt: movie.title, class: 'movie-img rounded-top mx-auto d-block pt-3' %>
           <div class="p-3 rounded-bottom d-flex flex-column">
             <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> ⭐️</span></strong>
