--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
- <div class='container'>
+ <div class='container mt-5'>
 
 
   <h1>Movies</h1>
@@ -27,8 +27,8 @@
       <% end %>
     </tbody>
   </table>
-  <%= link_to "Add Movies", new_movie_path, class: 'btn btn-success' %>
-  <%= link_to 'Back', root_path, class: 'btn btn-success' %>
+  <%= link_to "Add Movies", new_movie_path, class: 'btn btn-success mt-3' %>
+  <%= link_to 'Back', root_path, class: 'btn btn-success mt-3' %>
 
   <br>
 </div>
