--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -18,6 +18,9 @@
             <li class="nav-item">
               <%= link_to "My lists", root_path, class: "nav-link" %>
             </li>
+            <li class="nav-item">
+              <%= link_to "Movies", movies_path, class: "nav-link" %>
+            </li>
 
         </ul>
       </div>
