--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,34 @@
- <div class='container mt-5'>
+ <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <div class="container-fluid">
+      <%= link_to "#", class: "navbar-brand" do %>
+        <%= image_tag "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFjl4ryyU53dH03nrCSmhd_GBstljaiFp3ig&usqp=CAU" %>
+      <% end %>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+
+            <li class="nav-item active">
+              <%= link_to "New list", new_list_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "My lists", root_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Movies", movies_path, class: "nav-link" %>
+            </li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+<div class='container mt-5'>
+
+
 
 
   <h1>Movies</h1>
