WATCH LIST / ALMOST

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -46,7 +46,7 @@
     <tbody>
       <% @movies.each do |movie| %>
         <tr>
-          <td><%= movie.title %></td>
+          <td class='aling-center'><%= movie.title %></td>
           <td><%= movie.overview %></td>
           <td><%= movie.rating %></td>
 
