--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,3 +34,24 @@ a {
 a:hover {
   color: rgb(67, 55, 172);
 }
+
+
+#dropdownMenuLink {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.navbar-light .navbar-brand {
+  color: rgba(255,255,255,0.5);
+}
+
+.navbar-light .navbar-brand:hover {
+  color: rgba(255,255,255,0.5);
+}
+
+.navbar-light .navbar-brand:after {
+  color: rgba(255,255,255,0.5);
+}
