--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -37,15 +37,16 @@ a:hover {
 
 
 #dropdownMenuLink {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   justify-content: center;
   text-decoration: none;
+  padding-left: 30px;
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(255,255,255,0.5);
+  color: black;
 }
 
 .navbar-light .navbar-brand:hover {
@@ -54,4 +55,9 @@ a:hover {
 
 .navbar-light .navbar-brand:after {
   color: rgba(255,255,255,0.5);
+  border-color: rgba(255,255,255,0.5);
+}
+
+.dropdown {
+  padding-left: 30px;
 }
