--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,10 +3,7 @@
 
        <div class="dropdown navbar-brand">
           <a class="btn btn-light dropdown-toggle navbar-brand" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-
-            <img class="avatar" alt="avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFjl4ryyU53dH03nrCSmhd_GBstljaiFp3ig&usqp=CAU", width="40" height="40" class="rounded-circle" />
-
-
+            <img alt="avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFjl4ryyU53dH03nrCSmhd_GBstljaiFp3ig&usqp=CAU" class="rounded-circle" />
           </a>
           <ul class="dropdown-menu mr-5 justify-content-center" aria-labelledby="dropdownMenuLink">
             <li class='text-start'><%= link_to "New list", new_list_path, class: "dropdown-item" %></li>
