--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,10 +2,10 @@
   <div class="container-fluid">
 
        <div class="dropdown navbar-brand">
-          <a class="btn btn-light dropdown-toggle navbar-brand" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-            <img alt="avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFjl4ryyU53dH03nrCSmhd_GBstljaiFp3ig&usqp=CAU" class="rounded-circle" />
+          <a class="btn btn-light dropdown-toggle navbar-brand position-relative" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <img alt="avatar" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFjl4ryyU53dH03nrCSmhd_GBstljaiFp3ig&usqp=CAU" class="rounded-circle dropdown-img" />
           </a>
-          <ul class="dropdown-menu mr-5 justify-content-center" aria-labelledby="dropdownMenuLink">
+          <ul class="dropdown-menu  justify-content-center" aria-labelledby="dropdownMenuLink">
             <li class='text-start'><%= link_to "New list", new_list_path, class: "dropdown-item" %></li>
             <li class='text-start'><%= link_to "My lists", "#", class: "dropdown-item" %></li>
             <li class='text-start'><%= link_to "Movies", movies_path, class: "dropdown-item" %></li>
